# CowWeCom

./: .gitignore  AGENTS.md  COWWECOM_QUICKSTART.md  GIT_NOTES.md  README.md  app.py  config-template.json  config.py  pyproject.toml  requirements-knowledge.txt  requirements-optional.txt  requirements.txt
.clawhub/: lock.json
agent/: access_control.py  user_profiles.py
bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  bridge.py  context.py
channel/: channel.py  channel_factory.py  chat_channel.py  image_recognition.py  voice_streamer.py
common/: agent_task_limits.py  agent_task_runtime.py  capi_monthly_monitor.py  capi_quota_query.py  cloud_client.py  codex_quota_logic.py  codex_quota_query.py  const.py  git_code_updater.py  grok_image_prompt_rewriter.py  grok_real_mode_prompt_assets.py  grok_voice_mode.py  image_generation_routing.py  image_prompt_enhancer.py  image_reference_routing.py  image_send_limits.py  latency.py  llm_backend_auto_switcher.py  llm_backend_quota_refresh.py  llm_backend_router.py  llm_usage_tracker.py  project_optimizer_evidence.py  prompt_optimization_repository.py  reasoning_effort_policy.py  self_evolution.py  tool_attempt_memory.py  travel_planning_gate.py  utils.py  video_generation_params.py
docker/: Dockerfile.latest  docker-compose.knowledge.yml  docker-compose.yml
docs/: docs.json  grok.md  local-windows-weixin-deepseek.md
knowledge_backend/: README.md  manifest.json
models/: bot.py  bot_factory.py  openai_compatible_bot.py
public_protocol_knowledge/: README.md  manifest.json
skills/: README.md
(+733 files in other folders)
