[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowagent"
version = "1.0.0"
description = "CowAgent - AI Agent on WeChat and more"
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.6,<3.10",
    "chardet>=5.1.0,<6",
    "click>=8.0",
    "croniter>=2.0.0",
    "dashscope",
    "dingtalk_stream",
    "discord.py>=2.4,<3",
    "lark-oapi>=1.5.5",
    "legacy-cgi; python_version >= '3.13'",
    "Pillow",
    "pydub>=0.25.1",
    "pycryptodome",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "qrcode",
    "requests>=2.28.2",
    "web.py",
    "wechatpy",
    "websocket-client>=1.4.0",
    "zai-sdk",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "web.py",
    "pycryptodome",
]

[project.scripts]
cow = "cli.cli:main"

[tool.setuptools.packages.find]
include = ["cli*"]
